# asar

./: .clang-format  .gitignore  .travis.yml  LICENSE  README.md  README.txt  appveyor.yml  changelog.txt  dummy_rom.asm  dummy_rom.sfc  generate_html_table.py  generate_release_zip.py  index.html  make.sh  run_tests.bat  run_tests.sh  xkas.html
.github/workflows/: book-deploy.yml  cmake.yml  docs-deploy.yml
asar_19/shared/: common.js
asar_19/shared/highlight_js_asar/styles/: default.css
asar_2_beta/: 404.html  arch-65816.html  arch-spc700.html  arch-superfx.html  arch.html  binary.html  changelog-old.html  changelog.html  checks.html  cmd-index.html  compat.html  conditionals.html  defines.html  error-list.html  formatting.html  freespace.html  functions.html  highlight.css  highlight.js  includes.html  index.html  labels.html  macros.html  mapping-modes.html  math.html  namespaces.html  print.html  prints.html  program-counter.html  searchindex.js  searchindex.json  sectionhack.js  standard-defines.html  standard-includes.html  structs.html  usage.html  warning-list.html  warnings.html
changelog/: index.html
cmake/: _mingw-common.cmake  mingw-x64.cmake  mingw-x86.cmake
docs/: index.html
docs/changelog/: index.html
docs/manual/: errors-list.html  index.html  warnings-list.html
docs/newbook/: README.txt  book.toml  generate-index.py  highlight.min.js  hljs-asar.js  parse_warnings.py  sectionhack.js  update_hljs.py
docs/newbook/src/: SUMMARY.md  arch-65816.md  arch-spc700.md  arch-superfx.md  arch.md  binary.md  changelog-old.md  changelog.md  checks.md  cmd-index.md  compat.md  conditionals.md  defines.md  error-list.md  formatting.md  freespace.md  functions.md  includes.md  intro.md  labels.md  macros.md  mapping-modes.md  math.md  namespaces.md  prints.md  program-counter.md  standard-defines.md  standard-includes.md  structs.md  usage.md  warning-list.md  warnings.md
docs/newbook/theme/: ayu-highlight.css  highlight.js
docs/shared/highlight_js/: README.txt  highlight.min.js  highlight.pack.js
docs/shared/highlight_js/styles/: default.css
docs/shared/highlight_js_asar/: highlight_js_asar.js
ext/notepad-plus-plus/: syntax-highlighting.xml
ext/sublime-text/: 65c816.sublime-syntax
ext/vim/: asar.vim
manual/: index.html
manual/data/highlight_js/: highlight.pack.js
manual/data/highlight_js/styles/: default.css
src/: CMakeLists.txt  generate_manual_tables.py  update_c_bind.py
src/asar/: CMakeLists.txt  addr2line.cpp  addr2line.h  arch-65816.cpp  arch-shared.h  arch-spc700.cpp  arch-superfx.cpp  asar.h  asar_math.cpp  asar_math.h  assembleblock.cpp  assembleblock.h  assocarr.h  autoarray.h  crc32.cpp  crc32.h  dll_helper.cpp  dll_helper.h  errors.cpp  errors.h  fopen_helper.cpp  fopen_helper.h  freeram.c  freeram.h  interface-cli.cpp  interface-lib.cpp  interface-lib.h  interface-lib.h.in  interface-shared.h  ir.h  libcon.cpp  libcon.h  libmisc.h  libsmw.cpp  libsmw.h  libstr.cpp  libstr.h  macro.cpp  macro.h  main.cpp  (+14 more)
src/asar-app-test/: CMakeLists.txt
src/asar-dll-bindings/: asar.cs  asar.py  asardll.c  asardll.h
src/asar-dll-bindings/c/: asardll.c  asardll.c.in  asardll.h  asardll.h.in
src/asar-dll-bindings/c_sharp/: asar.cs
src/asar-dll-bindings/python/: asar.py
src/asar-dll-test/: CMakeLists.txt
src/asar-test/: CMakeLists.txt  test.cpp
src/asar-tests/: CMakeLists.txt  newtest.cpp  test.cpp
src/asar-tests-shared/: AsarTestShared.cmake  test.cpp
src/asar-tests/interface-tests/: main.py  sample1.asm  stddefines.txt  stdincludes.txt  test.cs
src/asar-tests/interface-tests/sample_dir/: file.asm
src/asar/lib/: libasar.pc.in
src/asar/platform/: file-helpers.cpp  file-helpers.h  thread-helpers.h
src/asar/platform/generic/: file-helpers-generic.cpp  thread-helpers-pthread.h
src/asar/platform/linux/: file-helpers-linux.cpp
src/asar/platform/windows/: file-helpers-win32.cpp  thread-helpers-win32.h
src/asar/res/windows/: asar.rc  asar_lib.rc
src/dll-bindings/: asar.cs  asardll.c  asardll.h
src/dll-test/: CMakeLists.txt  main.cpp
tests/: 0x.asm  120freespaces.asm  130freespaces.asm  32bitvalues.asm  advanced-prints.asm  arch-65816.asm  arch-spc700.asm  arch-superfx.asm  archswitch.asm  asdf1.asm  asdf2.asm  asdf3.asm  asdf4.asm  assert-fail.asm  assert-pass.asm  autoclean.asm  autoclean_2freecode_to_1freecode.asm  autoclean_twice.asm  badlabels.asm  badrep.asm  badsublabel.asm  bank_shorthand.asm  bankcross.asm  bigincbin.asm  builtindefinesfail.asm  builtindefinespass.asm  checksum.asm  commabrokenquotes.asm  comments.asm  datasize.asm  datasize_freespace.asm  db-spc.asm  dd.asm  define-quotes.asm  divbyforwardtable.asm  elseif.asm  emptysublabel.asm  errors_optimization.asm  escaping.asm  fastrom.asm  (+96 more)
tests/data/: invalid-table-1.tbl  invalid-table-2.tbl  invalid-table-3.tbl  invalid-table-4.tbl  pushtable1.asm  pushtable1.tbl  pushtable2.asm  pushtable2.tbl  table-rtl.tbl  table.asm  table.tbl  日本語😳.tbl
tests/include/: data.asm  loop1.asm  loop2.asm  macro_fuckery_include.asm
tests/include/deep/: data.asm
tests/include/deep/deeper/: data.asm
tests/includeonce/: test.asm
tests/includeonce/path1/: test.asm
tests/includeonce/path1/path2/: test.asm
tests/includeonce/path2/: test.asm
tests/includeonce/path3/: test.asm
tests/stdinclude/std/: test.asm
v1.90/changelog/: index.html
v1.90/manual/: index.html
v1.91/: index.html
v1.91/changelog/: index.html
v1.91/shared/highlight_js/: highlight.min.js
